--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "^7.1",
         "phpunit/phpunit": "^7.1",
         "laravel/framework": "^5.6",
-        "doctrine/dbal": "^2.9"
+        "doctrine/dbal": "^2.9",
+        "matt-allan/laravel-code-style": "^0.3.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.8"
