--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,12 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Ferreira\\AutoCrud\\ServiceProvider"
+            ]
+        }
     }
 }
