--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "phpunit/phpunit": "^7.1",
         "laravel/framework": "^5.6",
         "doctrine/dbal": "^2.9",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "matt-allan/laravel-code-style": "^0.3.0"
     },
     "require-dev": {
