--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "type": "library",
     "require": {
         "php": "^7.1",
-        "phpunit/phpunit": "^8.4",
-        "laravel/framework": "^7.24",
+        "phpunit/phpunit": "~8.0 || ~9.0",
+        "laravel/framework": "~7.0 || ~8.0",
         "doctrine/dbal": "^2.9",
         "friendsofphp/php-cs-fixer": "^2.16"
     },
